--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </a>
                         </h3>
                         <p>
-                            content
+                            We are Thomas Jefferson High School Graduates and rising college freshmen, all majoring in computer science. We have competed together in multiple competitive programming competitions including Stanford's Proco, MIT's Battlecode, UPenn's PClassic, along with many others, and winning a total of over 4000$.
                         </p>  
                     </div>
                     <div class="col-5" style="min-width:15.5em;">
@@ -114,7 +114,7 @@
                                     <span class="badge text-bg-success">Beginner</span>
                                 </p>
                                 <p class="card-text">
-                                    content
+                                    In this class we provide a strong basis for algebra knowledge that can be applied in both school and competitive math. A prerequisite of pre-algebra is strongly reccomended.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -134,7 +134,7 @@
                                     <span class="badge text-bg-success">Beginner</span>
                                 </p>
                                 <p class="card-text">
-                                    content
+                                    This class is a beginner's introduction to coding, teaching basic concepts such as lists, loops, if statements along with all possible pre-requisites for a student to be prepared to take AP Computer Science.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -154,7 +154,7 @@
                                     <span class="badge" style="background-color:rgb(255, 191, 88)">Intermediate</span>
                                 </p>
                                 <p class="card-text">
-                                    content
+                                    This class teaches essential algorithms for Competitive programming and acing coding interviews.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -174,7 +174,7 @@
                                     <span class="badge text-bg-danger">Advanced</span>
                                 </p>
                                 <p class="card-text">
-                                    content
+                                    This is by far our most advanced class. We teach the basics of AI optimization along with preparing students for high level programming competitions such as MIT battlecode.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -216,9 +216,7 @@
                                             </h2>
                                             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
-                                                    <strong>bold</strong> 
-                                                    content 
-                                                    <code>code</code>
+                                                    We offer one on one lessons with any instructor of your choice on any subject of your choice.
                                                 </div>
                                             </div>
                                         </div>
@@ -231,9 +229,7 @@
                                             </h2>
                                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
-                                                    <strong>bold</strong> 
-                                                    content 
-                                                    <code>code</code>
+                                                        We offer a few select courses taught by our national level instructors with weekly office hours.
                                                 </div>
                                             </div>
                                         </div>
@@ -241,14 +237,12 @@
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" id="headingThree">
                                                 <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                    <i class="h5 my-2 mx-2 bi-journal-bookmark"></i><b>subject material</b>
+                                                    <i class="h5 my-2 mx-2 bi-journal-bookmark"></i><b>material</b>
                                                 </button>
                                             </h2>
                                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
-                                                    <strong>bold</strong> 
-                                                    content 
-                                                    <code>code</code>
+                                                        Our subject material is custom made by us from our vast competitive programming experience
                                                 </div>
                                             </div>
                                         </div>
