--- a/tutoring.html
+++ b/tutoring.html
@@ -174,7 +174,7 @@
                                 content
                             </p>
                             <p>
-                                <a class="link-style-1-red" href="./tutoring.html" style="text-decoration: none;">Learn more</a>
+                                <a class="link-style-1-red" href="./about.html" style="text-decoration: none;">Learn more</a>
                                 about our tutors or
                                 <a class="link-style-1-purple" href="./contact.html" style="text-decoration: none;">contact us</a> 
                                 if interested.
@@ -226,11 +226,11 @@
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Multivariable Calculus</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Daniel</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Linear Algebra</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Daniel</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Elementary Differential Equations</th>
@@ -306,11 +306,11 @@
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">AP Physics C Mechanics</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Daniel</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">AP Physics C E&M</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Daniel</td>
                                             </tr>
                                         </tbody>
                                     </table>
