--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>placeholder</title>
+        <title>TuTuring: About Us</title>
         <!--link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.2.3/zephyr/bootstrap.min.css" integrity="sha512-dcTg+pv6j02FTyko5ua8nsnARs/l4u43vmnbeVgkFWB5wdLgfUq4CEotFWOlTE4XK7FfVriWj7BrpqET/a+SJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -72,7 +72,13 @@
             <div class="container">
                 <h4 class="subhead-shadow my-3">>>> overview</h4>
                 <p>
-                    lorem ipsum dolor sit amet
+                    We are Thomas Jefferson High School (TJHSST) graduates and rising college freshmen, all majoring in computer science.
+
+                    As a whole, we've served as leaders on TJHSST's highly successful Computer Team, where we've educated and inspired our club members on their computer science journeys. We've created and given countless lectures ranging from sorting to suffix automata, practice problems for our in-house contests, and spent hours in front of the whiteboard to figure out what works best to understand these topics. We've won many first and second place awards at competitive programming competitions hosted by UPenn, UMD, UVA, VCU, etc. 
+                    <br><br>
+                    We're also some of the top AI competitors in the world. In MIT Battlecode 2024, we won 1st in the HS division and ranked second overall among college and post-graduate teams. We were finalists in Correlation-One's HS Terminal competition. And among TJHSST's schoolwide AI competition itself, our bot is at a caliber beyond all current students, only neck-to-neck with one contender in the history of TJHSST AI.  
+                    <br><br>
+                    We are here to bring you a culmination of our experiences - to share with you the tricks to make CS addicting and the ways to think about abstract concepts intuitively. 
                 </p>
                 <h4 class="subhead-shadow my-3">>>> instructors</h4>
                 <div class="row">
@@ -85,7 +91,7 @@
                             </div>
                             <div class="col">
                                 <p>
-                                    munir
+                                    Munir
                                 </p>
                             </div>
                         </div>
@@ -100,7 +106,7 @@
                             </div>
                             <div class="col">
                                 <p>
-                                    johnny
+                                    Johnny
                                 </p>
                             </div>
                         </div>
@@ -117,7 +123,7 @@
                             </div>
                             <div class="col">
                                 <p>
-                                    daniel
+                                    Daniel
                                 </p>
                             </div>
                         </div>
@@ -132,7 +138,7 @@
                             </div>
                             <div class="col">
                                 <p>
-                                    max
+                                    Max
                                 </p>
                             </div>
                         </div>
