--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>placeholder</title>
+        <title>TuTuring: Courses</title>
         <!--link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.2.3/zephyr/bootstrap.min.css" integrity="sha512-dcTg+pv6j02FTyko5ua8nsnARs/l4u43vmnbeVgkFWB5wdLgfUq4CEotFWOlTE4XK7FfVriWj7BrpqET/a+SJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -153,7 +153,7 @@
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item" role="presentation">
                                 <a class="nav-link py-2 px-3 hover-purple active" data-bs-toggle="tab" href="#intro-alg" aria-selected="false" role="tab" tabindex="-1">
-                                    • Intro to Algebra
+                                    • Algebra
                                 </a>
                             </li>
                             <li class="nav-item" role="presentation">
@@ -279,7 +279,13 @@
                                     <div class="col">
                                         <div class="container">
                                             <p>
-                                                content
+                                                Python is one of the most versatile languages, commonly used in machine learning and web developement. In this class, students will gain both a concrete understanding of the foundations of Python and also the problem solving skills to use code to solve different problems.
+                                                <br><br>
+                                                This class is hands-on; students will learn concepts and then directly practice them by writing Python to solve algorithmic problems. To foster a nuanced understanding of the Python syntax, there will be friendly competition. For example, students who solve certain problems with the shortest code will earn recognition, which encourages experimentation of different techniques.
+                                                <br><br>
+                                                Tenative Class Schedule:
+
+
                                             </p>
                                         </div>
                                     </div>
@@ -321,7 +327,13 @@
                                     <div class="col">
                                         <div class="container">
                                             <p>
-                                                content
+                                                The ability to work with sophiscated algorithims and data structures is essential to competitive programming and valued in the workforce.
+                                                <br><br>
+                                                As leaders in the TJHSST Computer Team, our instructors have had extensive experience explaining these algorithms and how to apply them intuitively. 
+                                                <br><br>
+                                                Students should have prior programming experience. They will acquire the necessary skills to pass the USACO Bronze and Silver level, and be overprepared for the AP Computer Science A course.
+                                                <br><br>
+                                                Tenative Class Schedule:
                                             </p>
                                         </div>
                                     </div>
@@ -363,7 +375,15 @@
                                     <div class="col">
                                         <div class="container">
                                             <p>
-                                                content
+                                                Artificial Intelligence (AI) is the buzzword of the century. What actually constitutes AI? In this course, we’ll survey the origins of AI all the way to today’s neural networks.
+                                                <br><br>
+                                                This class is a synthesis of the world-class TJHSST AI curriculum and our vast experience competiting in adversarial AI competitions such as MIT Battlecode and Correlation-One's Terminal.
+
+                                                <br><br>
+                                                Tenative Class Schedule:
+                                                <br><br>
+                                                Note that there is a lot to AI. It is not possible to cover it all nor give the most robust understanding in a course of this scope. That being said, this course will give students the requisite ways to think about AI vs. traditional algorithms, construct these algorithms themselves. Most AI courses give a high-level understanding of the content, using libraries that solve the problem for you. We believe it’s important to start from the foundation. 
+
                                             </p>
                                         </div>
                                     </div>
