--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>placeholder</title>
+        <title>TuTuring</title>
         <!--link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.2.3/zephyr/bootstrap.min.css" integrity="sha512-dcTg+pv6j02FTyko5ua8nsnARs/l4u43vmnbeVgkFWB5wdLgfUq4CEotFWOlTE4XK7FfVriWj7BrpqET/a+SJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -65,7 +65,7 @@
             <div id="home-top" class="row">
                 <div class="jumbotron jumbotron-fluid" style="margin-top: 7rem">
                     <div class="container">
-                        <h1 class="display-3" style="margin-bottom: 1rem;">placeholder name</h1>
+                        <h1 class="display-3" style="margin-bottom: 1rem;">TuTuring</h1>
                         <p class="lead">Quality curriculum.&nbsp;&nbsp;Motivated instructors.&nbsp;&nbsp;Cultivating curiosity.</p>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                             </a>
                         </h3>
                         <p>
-                            We are Thomas Jefferson High School Graduates and rising college freshmen, all majoring in computer science. We have competed together in multiple competitive programming competitions including Stanford's Proco, MIT's Battlecode, UPenn's PClassic, along with many others, and winning a total of over 4000$.
+                            We are Thomas Jefferson High School Graduates and rising college freshmen, all majoring in computer science. We have competed together in multiple competitive programming and AI competitions including Stanford's Proco, MIT's Battlecode, UPenn's PClassic, along with many others, and winning a total of over $5000.
                         </p>  
                     </div>
                     <div class="col-5" style="min-width:15.5em;">
@@ -107,7 +107,7 @@
                         <div class="card h-100" style="min-width: 15.5em">
                             <div class="card-body">
                                 <h5 class="card-title">
-                                    Intro to Algebra
+                                    Algebra
                                 </h5>
                                 <p class="card-text">
                                     <span class="badge" style="background-color:rgb(199, 88, 255)">Math</span>
@@ -242,7 +242,7 @@
                                             </h2>
                                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
-                                                        Our subject material is custom made by us from our vast competitive programming experience
+                                                        Our subject material is custom made from our vast competitive programming experience.
                                                 </div>
                                             </div>
                                         </div>
