--- a/tutoring.html
+++ b/tutoring.html
@@ -234,6 +234,10 @@
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Elementary Differential Equations</th>
+                                                <td class="py-2">Max, Johnny</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Competitive Math (level)</th>
                                                 <td class="py-2">Max</td>
                                             </tr>
                                         </tbody>
@@ -277,7 +281,7 @@
                                                 <td class="py-2">all tutors</td>
                                             </tr>
                                             <tr class="table-secondary">
-                                                <th class="py-2" scope="row">Intro to Competitive Programming</th>
+                                                <th class="py-2" scope="row">Competitive Programming (USACO Bronze-Gold)</th>
                                                 <td class="py-2">all tutors</td>
                                             </tr>
                                         </tbody>
@@ -334,7 +338,7 @@
                                         <tbody>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">CAD / Fusion 360</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Munir</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Analog / Digital Electronics</th>
@@ -342,7 +346,7 @@
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Arduino</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Johnny, Munir</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -352,10 +356,50 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingFive">
                                     <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                        <i class="h5 my-2 mx-2 bi-journal-bookmark"></i><b>humanities</b>
+                                    </button>
+                                </h2>
+                                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#tutoring-accordion">
+                                    <table class="table table-striped table-bordered my-0">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th class="py-2" scope="col">Topic</th>
+                                                <th class="py-2" scope="col" style="width: 40%">Tutors</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">AP US History</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">AP US Government</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">AP Language and Composition</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">AP Literature and Composition</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">General Writing</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingSix">
+                                    <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                                         <i class="h5 my-2 mx-2 bi-pencil-square"></i><b>exam prep</b>
                                     </button>
                                 </h2>
-                                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#tutoring-accordion">
+                                <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#tutoring-accordion">
                                     <table class="table table-striped table-bordered my-0">
                                         <thead class="thead-dark">
                                             <tr>
