--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </a>
                         </h3>
                         <p>
-                            We are Thomas Jefferson High School Graduates and rising college freshmen, all majoring in computer science. We have competed together in multiple competitive programming and AI competitions including Stanford's Proco, MIT's Battlecode, UPenn's PClassic, along with many others, and winning a total of over $5000.
+                            We are Thomas Jefferson High School graduates and rising college freshmen, all majoring in computer science. We have competed together in multiple competitive programming and AI competitions including Stanford's Proco, MIT's Battlecode, UPenn's PClassic, along with many others, and winning a total of over $5000.
                         </p>  
                     </div>
                     <div class="col-5" style="min-width:15.5em;">
