--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="text-muted">Course Details</a>
+                                <a class="text-muted" href="./courses.html">Course Details</a>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="text-muted">Course Details</a>
+                                <a class="text-muted" href="./courses.html">Course Details</a>
                             </div>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="text-muted">Course Details</a>
+                                <a class="text-muted" href="./courses.html">Course Details</a>
                             </div>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="text-muted">Course Details</a>
+                                <a class="text-muted" href="./courses.html">Course Details</a>
                             </div>
                         </div>
                     </div>
