--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <a href="https://github.com/thewaxmango/tutor-site" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
                     <i class="h4 m-0 bi-github"></i>
                 </a>
-                <span class="mb-3 mb-md-0 text-body-secondary">site by Max Wang, a <i>placeholder</i> instructor</span>
+                <span class="mb-3 mb-md-0 text-body-secondary">site by Max Wang, a <i>TuTuring</i> instructor</span>
               </div>
           
               <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
