--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                     <b>Hours:</b> daniel - daniel<br><br>
 
                     To sign up for a class, fill out 
-                    <a class="link-style-1-red" href="./about.html" style="text-decoration: none;">this form</a>.
+                    <a class="link-style-1-red" href="" style="text-decoration: none;">this form</a>.
                     <br>
                     For individual instructors' contacts, see our 
                     <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">about page</a>
