--- a/contact.html
+++ b/contact.html
@@ -71,16 +71,19 @@
 
             <div class="container">
                 <p>
+                    <b><u>Organization contacts:</u></b><br>
                     <b>Email:</b> daniel@daniel.daniel<br>
                     <b>Phone:</b> (daniel)daniel-daniel<br>
-                    <b>Hours:</b> daniel - daniel<br><br>
+                    <b>Hours:</b> daniel - daniel
+                </p>
 
+                <p>
                     To sign up for a class, fill out 
                     <a class="link-style-1-red" href="" style="text-decoration: none;">this form</a>.
                     <br>
-                    For individual instructors' contacts, see our 
-                    <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">about page</a>
-                    for details.
+                    For our instructors' contact information, see our 
+                    <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">about page</a>.
+                    <br>
                 </p>
             </div>
         </div>
