--- a/tutoring.html
+++ b/tutoring.html
@@ -165,13 +165,18 @@
                     <div class="col" style="min-width: 15em;">
                         <div class="row">
                             <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> info</h4>
-                            <a class="my-auto px-0" href="#" style="max-width: fit-content;">
+                            <a class="my-auto px-0" href="./contact.html" style="max-width: fit-content;">
                                 <span class="badge badge-hover" style="background-color:#c074ff">Contact Us</span>
                             </a>
                         </div>
                         <div class="row my-3">
                             <p>
-                                content
+                                Our tutors are academic leaders from TJHSST, 
+                                taking the most advanced classes and leading/lecturing for some of the prestigious competition clubs.
+                            </p>
+                            <p>
+                                We have extensive experience teaching content anywhere from beginner to advanced levels
+                                through our clubs and tutoring both in and out of school.
                             </p>
                             <p>
                                 <a class="link-style-1-red" href="./about.html" style="text-decoration: none;">Learn more</a>
@@ -226,18 +231,18 @@
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Multivariable Calculus</th>
-                                                <td class="py-2">Daniel</td>
+                                                <td class="py-2">Daniel, Max</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Linear Algebra</th>
-                                                <td class="py-2">Daniel</td>
+                                                <td class="py-2">Daniel, Max</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Elementary Differential Equations</th>
-                                                <td class="py-2">Max, Johnny</td>
+                                                <td class="py-2">Johnny, Max</td>
                                             </tr>
                                             <tr class="table-secondary">
-                                                <th class="py-2" scope="row">Competitive Math (level)</th>
+                                                <th class="py-2" scope="row">Competitive Math (AMC8/10/12 level)</th>
                                                 <td class="py-2">Max</td>
                                             </tr>
                                         </tbody>
@@ -306,15 +311,15 @@
                                         <tbody>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">AP Chemistry</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Max</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">AP Physics C Mechanics</th>
-                                                <td class="py-2">Daniel</td>
+                                                <td class="py-2">Daniel, Max</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">AP Physics C E&M</th>
-                                                <td class="py-2">Daniel</td>
+                                                <td class="py-2">Daniel, Max</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -338,15 +343,15 @@
                                         <tbody>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">CAD / Fusion 360</th>
-                                                <td class="py-2">Munir</td>
+                                                <td class="py-2">Munir, Max</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Analog / Digital Electronics</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Max</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Arduino</th>
-                                                <td class="py-2">Johnny, Munir</td>
+                                                <td class="py-2">Johnny, Max, Munir</td>
                                             </tr>
                                         </tbody>
                                     </table>
