--- a/about.html
+++ b/about.html
@@ -78,6 +78,8 @@
                     <br><br>
                     We're also some of the top AI competitors in the world. In MIT Battlecode 2024, we won 1st in the HS division and ranked second overall among college and post-graduate teams. We were finalists in Correlation-One's HS Terminal competition. And among TJHSST's schoolwide AI competition itself, our bot is at a caliber beyond all current students, only neck-to-neck with one contender in the history of TJHSST AI.  
                     <br><br>
+                    That isn't to say we don't have experience outside of computer science. Some of us have been leaders or competitors in TJ's Varsity Math Team, Science Olympiad, Physics Team, even Writing Center - just to name a few.
+                    <br><br>
                     We are here to bring you a culmination of our experiences - to share with you the tricks to make CS addicting and the ways to think about abstract concepts intuitively. 
                 </p>
                 <h4 class="subhead-shadow my-3">>>> instructors</h4>
