--- a/courses.html
+++ b/courses.html
@@ -279,7 +279,7 @@
                                     <div class="col">
                                         <div class="container">
                                             <p>
-                                                Python is one of the most versatile languages, commonly used in machine learning and web developement. In this class, students will gain both a concrete understanding of the foundations of Python and also the problem solving skills to use code to solve different problems.
+                                                Python is one of the most versatile languages, commonly used in machine learning and web development. In this class, students will gain both a concrete understanding of the foundations of Python and also the problem solving skills to use code to solve different problems.
                                                 <br><br>
                                                 This class is hands-on; students will learn concepts and then directly practice them by writing Python to solve algorithmic problems. To foster a nuanced understanding of the Python syntax, there will be friendly competition. For example, students who solve certain problems with the shortest code will earn recognition, which encourages experimentation of different techniques.
                                                 <br><br>
