--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <div id="about-section" class="container my-5 text-end">
                 <div class="row">
-                    <div class="col" style="min-width: 15.5em;">
+                    <div class="col" style="min-width: 16em;">
                         <h3>
                             <a class="link-style-2-blue link-style-2-reverse" href="./about.html" style="text-decoration: none; color: inherit;">
                                 who we are <<<
@@ -83,7 +83,7 @@
                             We are Thomas Jefferson High School graduates and rising college freshmen, all majoring in computer science. We have competed together in multiple competitive programming and AI competitions including Stanford's Proco, MIT's Battlecode, UPenn's PClassic, along with many others, and winning a total of over $5000.
                         </p>  
                     </div>
-                    <div class="col-5" style="min-width:15.5em;">
+                    <div class="col-5" style="min-width:16em;">
                         <div class="card user-select-none" style="min-width: 100%; overflow:hidden">
                             <img class="card-img" src="./static/assets/battlecode.jpg" alt="lecture-image">
                         </div>
@@ -104,7 +104,7 @@
                 </p>
                 <div class="row d-flex column-gap-0">
                     <div class="col-auto my-1" style="min-height: 100%">
-                        <div class="card h-100" style="min-width: 15.5em">
+                        <div class="card h-100" style="min-width: 16em">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     Algebra
@@ -114,7 +114,7 @@
                                     <span class="badge text-bg-success">Beginner</span>
                                 </p>
                                 <p class="card-text">
-                                    In this class we provide a strong basis for algebra knowledge that can be applied in both school and competitive math. A prerequisite of pre-algebra is strongly reccomended.
+                                    This class provides strong basis for algebra that can be applied in both school and competitive math. A prerequisite of pre-algebra is strongly recommended.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -124,7 +124,7 @@
                     </div>
                      
                     <div class="col-auto my-1" style="min-height: 100%">
-                        <div class="card h-100" style="min-width: 15.5em">
+                        <div class="card h-100" style="min-width: 16em">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     Intro to Python 
@@ -134,7 +134,7 @@
                                     <span class="badge text-bg-success">Beginner</span>
                                 </p>
                                 <p class="card-text">
-                                    This class is a beginner's introduction to coding, teaching basic concepts such as lists, loops, if statements along with all possible pre-requisites for a student to be prepared to take AP Computer Science.
+                                    Introduction to coding with the Python language. Teaching basic concepts such as lists, loops, if statements that prepare students for studying at the level of AP Computer Science.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -144,7 +144,7 @@
                     </div>
 
                     <div class="col-auto my-1" style="min-height: 100%">
-                        <div class="card h-100" style="min-width: 15.5em">
+                        <div class="card h-100" style="min-width: 16em">
                             <div class="card-body px-4">
                                 <h5 class="card-title">
                                     Algorithms and Data Structures 
@@ -154,7 +154,7 @@
                                     <span class="badge" style="background-color:rgb(255, 191, 88)">Intermediate</span>
                                 </p>
                                 <p class="card-text">
-                                    This class teaches essential algorithms for Competitive programming and acing coding interviews.
+                                    This class teaches essential algorithms for competitive programming and coding interviews and are foundational for further computer science topics.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -164,7 +164,7 @@
                     </div>
 
                     <div class="col-auto my-1" style="min-height: 100%">
-                        <div class="card h-100" style="min-width: 15.5em">
+                        <div class="card h-100" style="min-width: 16em">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     Intro to Artificial Intelligence
@@ -174,7 +174,7 @@
                                     <span class="badge text-bg-danger">Advanced</span>
                                 </p>
                                 <p class="card-text">
-                                    This is by far our most advanced class. We teach the basics of AI optimization along with preparing students for high level programming competitions such as MIT battlecode.
+                                    We teach the basics of AI and optimization and prepare students for high level programming competitions like Battlecode.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -187,12 +187,12 @@
 
             <div id="tutoring-section" class="container my-5 text-end" style="padding-top:0.25rem;">
                 <div class="row">
-                    <div class="col-6" style="min-width: 15.5em">
+                    <div class="col-6" style="min-width: 16em">
                         <div class="card user-select-none" style="min-width: 100%; overflow:hidden">
                             <img class="card-img" src="./static/assets/lecture.png" alt="lecture-image">
                         </div>
                     </div>
-                    <div class="col" style="min-width: 15.5em">
+                    <div class="col" style="min-width: 16em">
                         <h3>
                             <a class="link-style-2-green link-style-2-reverse" href="./tutoring.html" style="text-decoration: none; color: inherit;">
                                 tutoring <<<
@@ -200,7 +200,7 @@
                         </h3>
                         <p>
                             <a class="link-style-1-green" href="./tutoring.html" style="text-decoration: none;">Tutoring services</a>
-                            available upon request.
+                            available upon request - both online and in person.<br>
                             <a class="link-style-1-purple" href="./contact.html" style="text-decoration: none;">Contact us</a> 
                             if interested.
                         </p>
@@ -216,7 +216,10 @@
                                             </h2>
                                             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
-                                                    We offer one on one lessons with any instructor of your choice on any subject of your choice.
+                                                    We offer one on one lessons with any instructor of your choice on any subject of your choice. 
+                                                    <br><br>
+                                                    Topics and other information can be found on the 
+                                                    <a class="link-style-1-green" href="./tutoring.html" style="text-decoration: none;">tutoring</a> page.
                                                 </div>
                                             </div>
                                         </div>
@@ -229,7 +232,10 @@
                                             </h2>
                                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
-                                                        We offer a few select courses taught by our national level instructors with weekly office hours.
+                                                    Aside from one on one lessons, we also have the option for small group lessons for a discount group price. 
+                                                    <br><br>
+                                                    Once again, topics and more information can be found on the 
+                                                    <a class="link-style-1-green" href="./tutoring.html" style="text-decoration: none;">tutoring</a> page.
                                                 </div>
                                             </div>
                                         </div>
@@ -242,7 +248,8 @@
                                             </h2>
                                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
-                                                        Our subject material is custom made from our vast competitive programming experience.
+                                                    We are able to provide curricula for most topics, 
+                                                    but we are also able to teach off of materials that students provide (e.g. from a book or along with a class).
                                                 </div>
                                             </div>
                                         </div>
@@ -261,7 +268,8 @@
                     </a>
                 </h3>
                 <p>
-                    content
+                    See our contat information on
+                    <a class="link-style-1-purple" href="./contact.html" style="text-decoration: none;">this page</a>.
                 </p>
             </div>
         </div>
