--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
                                     <span class="badge text-bg-success">Beginner</span>
                                 </p>
                                 <p class="card-text">
-                                    This class provides strong basis for algebra that can be applied in both school and competitive math. A prerequisite of pre-algebra is strongly recommended.
+                                    This class covers most topics found in middle school Algebra courses.
+                                    <br><br>
+                                    Students will be able to apply algebra knowledge in both schoolwork and competition math.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -134,7 +136,9 @@
                                     <span class="badge text-bg-success">Beginner</span>
                                 </p>
                                 <p class="card-text">
-                                    Introduction to coding with the Python language. Teaching basic concepts such as lists, loops, if statements that prepare students for studying at the level of AP Computer Science.
+                                    Introduction to coding with the Python languagel; teaching basic concepts such as variables, lists, and loops. 
+                                    <br><br>
+                                    Prepares students for computer science at the level of AP Computer Science.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -154,7 +158,9 @@
                                     <span class="badge" style="background-color:rgb(255, 191, 88)">Intermediate</span>
                                 </p>
                                 <p class="card-text">
-                                    This class teaches essential algorithms for competitive programming and coding interviews and are foundational for further computer science topics.
+                                    This class teaches foundational algorithms that are essential for any computer science student.
+                                    <br><br>
+                                    These topics are also extremely prominent in competitive programming and coding interviews.
                                 </p>
                             </div>
                             <div class="card-footer">
@@ -174,7 +180,9 @@
                                     <span class="badge text-bg-danger">Advanced</span>
                                 </p>
                                 <p class="card-text">
-                                    We teach the basics of AI and optimization and prepare students for high level programming competitions like Battlecode.
+                                    We teach the basics of AI and optimization critical for understanding any modern application of AI/machine learning.
+                                    <br><br>
+                                    Also prepares students for high level competitions like Battlecode.
                                 </p>
                             </div>
                             <div class="card-footer">
